--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "helmet": "^3.21.2"
   },
   "engines": {
-    "node": "10"
+    "node": "^10.15.3"
   },
   "repository": {
     "type": "git",
